force-app/main/default/objects/Performance_Metric__c/Performance_Metric__c.object-meta.xml
<CustomObject>
    <label>Performance Metric</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>