force-app/main/default/objects/Performance_Metric__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>