force-app/main/default/objects/Performance_Metric__c/fields/Iteration__c.field-meta.xml
<CustomField>
    <fullName>Iteration__c</fullName>
    <label>Iteration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>