force-app/main/default/objects/Performance_Metric__c/fields/Latency_ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_ms__c</fullName>
    <label>Latency (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>