force-app/main/default/objects/Performance_Metric__c/fields/Payload_Size_kb__c.field-meta.xml
<CustomField>
    <fullName>Payload_Size_kb__c</fullName>
    <label>Payload Size (kb)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>