force-app/main/default/objects/Performance_Metric__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>